--- a/www.nass.gov.ng/4e7121cbdd047080bd98e4708d51f0685778c8cd.yml
+++ b/www.nass.gov.ng/4e7121cbdd047080bd98e4708d51f0685778c8cd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:54:04 GMT
+    - Thu, 22 Mar 2018 13:28:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0t%2COvOOKOzLEa3n2sNz6q3; path=/
+    - PHPSESSID=VgzkOopBkqKhf9LTeQGTj1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:54:04 GMT
+recorded_at: Thu, 22 Mar 2018 13:28:56 GMT
