--- a/www.nass.gov.ng/fdbcc7e697ea6d712da778ebaded03eeb692f5ed.yml
+++ b/www.nass.gov.ng/fdbcc7e697ea6d712da778ebaded03eeb692f5ed.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:56:41 GMT
+    - Thu, 22 Mar 2018 13:32:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=G-JE4lsge4L69PX0BNW8O2; path=/
+    - PHPSESSID=aBk7cS1-D8skAl1Fry2%2Cm2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:56:41 GMT
+recorded_at: Thu, 22 Mar 2018 13:32:17 GMT
