--- a/www.nass.gov.ng/8e1a902c867aec594f3d64350954a9970a282b32.yml
+++ b/www.nass.gov.ng/8e1a902c867aec594f3d64350954a9970a282b32.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 23:03:22 GMT
+    - Thu, 22 Mar 2018 13:39:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tCJr84ORBXnYu1wrPapY33; path=/
+    - PHPSESSID=DN516K%2CQswQT9ei7LJMoQ3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 23:03:22 GMT
+recorded_at: Thu, 22 Mar 2018 13:39:51 GMT
