--- a/www.nass.gov.ng/a57edb402cce30220815226d5ca2c349c389e39c.yml
+++ b/www.nass.gov.ng/a57edb402cce30220815226d5ca2c349c389e39c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 23:09:51 GMT
+    - Thu, 22 Mar 2018 13:45:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PbjmaitZRpoKQGlV-spb12; path=/
+    - PHPSESSID=2DwVWjHxXJZrUdiG-%2CZ5y3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 23:09:52 GMT
+recorded_at: Thu, 22 Mar 2018 13:45:41 GMT
