--- a/www.nass.gov.ng/1df88f969f1c9d83b550f8cb4c1904ff50bf8176.yml
+++ b/www.nass.gov.ng/1df88f969f1c9d83b550f8cb4c1904ff50bf8176.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 23:11:35 GMT
+    - Thu, 22 Mar 2018 13:47:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=m33IS00ga-vdIxSoWHe7%2C2; path=/
+    - PHPSESSID=Zw8bFIp86u5msV-FA9m961; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 23:11:35 GMT
+recorded_at: Thu, 22 Mar 2018 13:47:03 GMT
