--- a/www.nass.gov.ng/6965475315e169db13a0e880ae64285c08f7a666.yml
+++ b/www.nass.gov.ng/6965475315e169db13a0e880ae64285c08f7a666.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 23:12:25 GMT
+    - Thu, 22 Mar 2018 13:47:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ui70GQJ5klsmvyde%2CNYvt1; path=/
+    - PHPSESSID=SSLcHMMG2FY%2CmbzIEVEMM2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 23:12:25 GMT
+recorded_at: Thu, 22 Mar 2018 13:47:57 GMT
