--- a/www.nass.gov.ng/85514abce639afbd93ad93823aa5ddb542f615c1.yml
+++ b/www.nass.gov.ng/85514abce639afbd93ad93823aa5ddb542f615c1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 23:16:35 GMT
+    - Thu, 22 Mar 2018 13:50:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2Ck4MIK0DTojScJgnFjWy32; path=/
+    - PHPSESSID=StqVbQXIZr33RUk%2ClfJTQ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 23:16:35 GMT
+recorded_at: Thu, 22 Mar 2018 13:50:22 GMT
