--- a/www.nass.gov.ng/a27c2c24fa275fd533b551f1daf3a986cfb4b182.yml
+++ b/www.nass.gov.ng/a27c2c24fa275fd533b551f1daf3a986cfb4b182.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 23:20:59 GMT
+    - Thu, 22 Mar 2018 13:54:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Qepm24b0swOLezeYi%2CX1w3; path=/
+    - PHPSESSID=sux4uixKCA34KQwok-W0E0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 23:20:59 GMT
+recorded_at: Thu, 22 Mar 2018 13:54:57 GMT
