--- a/www.nass.gov.ng/69a48311a7cfba996bf1a3951c9eb4e4ea4e481f.yml
+++ b/www.nass.gov.ng/69a48311a7cfba996bf1a3951c9eb4e4ea4e481f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 23:21:36 GMT
+    - Thu, 22 Mar 2018 13:55:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=L18vx2jDbb6X%2CGDdwE0MI1; path=/
+    - PHPSESSID=TFzjzBGXfphkc6TuFePfi2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 23:21:36 GMT
+recorded_at: Thu, 22 Mar 2018 13:55:37 GMT
