--- a/www.nass.gov.ng/37ca2108cd6d2c0c936710568960a17d3e81a7d3.yml
+++ b/www.nass.gov.ng/37ca2108cd6d2c0c936710568960a17d3e81a7d3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 23:24:34 GMT
+    - Thu, 22 Mar 2018 13:59:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ULQDSE3Pcc27WeI36AkqY0; path=/
+    - PHPSESSID=2Oy6dvAOTp2DAjWwGcdQ%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 23:24:34 GMT
+recorded_at: Thu, 22 Mar 2018 13:59:31 GMT
