--- a/www.nass.gov.ng/f02e2aa51335041bf4055d08c557f3a8010284f5.yml
+++ b/www.nass.gov.ng/f02e2aa51335041bf4055d08c557f3a8010284f5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 23:31:59 GMT
+    - Thu, 22 Mar 2018 14:09:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jKWRYyKGtZhcO9N1AkyWg2; path=/
+    - PHPSESSID=9GUc%2C7cVY3I8jtXiN0IX12; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 23:31:59 GMT
+recorded_at: Thu, 22 Mar 2018 14:09:05 GMT
