--- a/www.nass.gov.ng/8f274d40352fcc1cbe9b3c678fd6d79843c5c5d4.yml
+++ b/www.nass.gov.ng/8f274d40352fcc1cbe9b3c678fd6d79843c5c5d4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 23:54:10 GMT
+    - Thu, 22 Mar 2018 14:28:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hjoMvjXsX%2C7z-3NRsbCOV3; path=/
+    - PHPSESSID=zuaI%2CsvHbjizsqWdto8Ft0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 23:54:10 GMT
+recorded_at: Thu, 22 Mar 2018 14:28:25 GMT
