--- a/www.nass.gov.ng/a5edadbf6e4614a35c7079335c90f7e7f0c78fbc.yml
+++ b/www.nass.gov.ng/a5edadbf6e4614a35c7079335c90f7e7f0c78fbc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 23:58:03 GMT
+    - Thu, 22 Mar 2018 14:30:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zqaxt%2C5UiVEkMNZeFjdIw1; path=/
+    - PHPSESSID=zBnxMIGxx7n3palooxUZc0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 23:58:03 GMT
+recorded_at: Thu, 22 Mar 2018 14:30:41 GMT
