--- a/www.nass.gov.ng/4a427c01dc7f4071d7bcad524a8b8c23e6ff8c14.yml
+++ b/www.nass.gov.ng/4a427c01dc7f4071d7bcad524a8b8c23e6ff8c14.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 00:12:32 GMT
+    - Thu, 22 Mar 2018 14:44:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=H-4TP%2CN4H-d-EdCd%2CYESl1; path=/
+    - PHPSESSID=HaoCjyr9bcYAYAeN9QNq82; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 00:12:32 GMT
+recorded_at: Thu, 22 Mar 2018 14:44:24 GMT
