--- a/www.nass.gov.ng/370e6b6dbd5e2db8bb9a295aba6d071f112e141f.yml
+++ b/www.nass.gov.ng/370e6b6dbd5e2db8bb9a295aba6d071f112e141f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 00:35:17 GMT
+    - Thu, 22 Mar 2018 15:06:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ux09ZHXGV2H7eC94bc%2C8f0; path=/
+    - PHPSESSID=kijq0pJLDz0apGhVKu57F1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 00:35:17 GMT
+recorded_at: Thu, 22 Mar 2018 15:06:14 GMT
