--- a/www.nass.gov.ng/b6e10f2ae6b49d52dd64ca9d508600fd7dab7211.yml
+++ b/www.nass.gov.ng/b6e10f2ae6b49d52dd64ca9d508600fd7dab7211.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 00:36:42 GMT
+    - Thu, 22 Mar 2018 15:07:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iz7j86%2C01y1qtX7lWOKRW1; path=/
+    - PHPSESSID=n6UN-qMVouA6dd2m8%2Cj8s0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 00:36:43 GMT
+recorded_at: Thu, 22 Mar 2018 15:07:18 GMT
