--- a/www.nass.gov.ng/4d6c3cbe54405edd9c86ca311b68545aafd41559.yml
+++ b/www.nass.gov.ng/4d6c3cbe54405edd9c86ca311b68545aafd41559.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 00:46:17 GMT
+    - Thu, 22 Mar 2018 15:17:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ydPvAD%2CQXpteZakDljnH62; path=/
+    - PHPSESSID=3RFeqmveNd2SDzenGY9gH2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 00:46:17 GMT
+recorded_at: Thu, 22 Mar 2018 15:17:45 GMT
